--- a/src/main/resources/public/css/layout.css
+++ b/src/main/resources/public/css/layout.css
@@ -1,5 +1,24 @@
 body{
- background-image: url(/images/bg.jpg);
+ background-image: url(/images/bg.jpeg);
     background-repeat: no-repeat;
     background-size: cover;
+    background-po
+}
+.overlay{
+background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0, 0.8);
+  color: white;
+  font-weight: bold;
+  border: 3px solid #f1f1f1;
+   padding: 20px;
+   margin-top:10%;
+}
+.formClass{
+margin-top:4%;
+background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0, 0.4);
+  color: white;
+  font-weight: bold;
+  border: 3px solid #f1f1f1;
+   padding: 20px;
 }
