--- a/src/main/resources/templates/heroes-form.hbs
+++ b/src/main/resources/templates/heroes-form.hbs
@@ -6,7 +6,8 @@
 
 {{#partial "content"}}
     {{#if editHero}}
-        <h1>Edit your Hero's entries!</h1>
+        <h1 class="text-white">Edit your Hero's entries!</h1>
+        <div class="formClass">
         <form action="/heroes/{{editHero.id}}/update" method="post" class="form-group">
 
             <label for="name">Name</label>
@@ -21,14 +22,15 @@
             <label for="weakness">Weakness</label>
             <input id="weakness" name="weakness" type="text" value="{{editHero.weakness}}" class="form-control"><br>
 
-            <button type="submit" class="btn btn-default" >Update Hero</button>
+            <button type="submit" class="btn btn-primary" >Update Hero</button>
         </form>
+        </div>
     {{else}}
 
-        <h1>Add Hero!</h1>
+        <h1 class="text-white">Add Hero!</h1>
 
-
-        <form action="/heroes" method="POST" class="form-group form">
+        <div class="formClass">
+            <form action="/heroes" method="POST" class="form-group form">
             <div class="md-form">
                 <label id="h1-1" for="name">Name</label>
                 <input id="name" name="name" type="text" class="form-control" required>
@@ -45,7 +47,7 @@
                 <label id="h1-1" for="weakness">Weakness</label>
                 <input id="weakness" name="weakness" type="text" class="form-control" required>
             </div>
-            <button type="submit"  class="btn mdb-color darken-3 animated  infinite btn-1">Add Hero</button>
+            <button type="submit"  class="btn btn-primary mt-4">Add Hero</button>
         </form>
 
         </div>
