Add link to font awesome in layout.hbs and add the font style in css

--- a/src/main/resources/templates/layout.hbs
+++ b/src/main/resources/templates/layout.hbs
@@ -3,6 +3,7 @@
 <head>
     <title>{{#block "title"}}Hero Squad{{/block}}</title>
     <link rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css'>
+    <link href="https://fonts.googleapis.com/css?family=Gayathri&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/layout.css">
 </head>
 <body>
