--- a/src/main/resources/public/css/layout.css
+++ b/src/main/resources/public/css/layout.css
@@ -4,7 +4,9 @@ body{
     background-size: cover;
     height:100%;
     width:100%;
+    font-family: 'Gayathri', sans-serif;
 }
+
 .overlay{
 background-color: rgb(0,0,0);
   background-color: rgba(0,0,0, 0.8);
@@ -25,5 +27,5 @@ background-color: rgb(0,0,0);
 }
 
 #fontsize{
-font-size :30px;
+font-size :35px;
 }
