--- a/src/main/resources/templates/hero-list.hbs
+++ b/src/main/resources/templates/hero-list.hbs
@@ -8,13 +8,8 @@
             <div class="col-sm-4 text-center">
             <div class="card mb-4">
                 <div class="card-body">
-                <p class="card-title text-center"> <span>{{name}}</span></p>
-                <p class="card-text">Age: {{age}}</p>
-                <p>Super Powers: {{power}}</p>
-                <p>Weakness: {{weakness}}</p>
-                    <a  href="/heroes/{{hero.id}}/delete" class="btn btn-primary">Delete</a>
-                    <a href="/heroes/{{hero.id}}/update" class="btn btn-primary">Update</a>
-                    <a  href="/squad" class="btn btn-primary">Add to a squad</a>
+                <p class="card-text"> <span>{{name}}</span></p>
+                    <a  href="/heroes/{{id}}" class="btn btn-primary">View Details</a>
                 </div>
             </div>
             </div>
