--- a/src/main/resources/public/css/layout.css
+++ b/src/main/resources/public/css/layout.css
@@ -15,6 +15,7 @@ background-color: rgb(0,0,0);
   border: 3px solid #f1f1f1;
    padding: 20px;
    margin-top:10%;
+   width: auto;
 }
 .formClass{
 margin-top:4%;
