--- a/src/main/resources/templates/squad-list.hbs
+++ b/src/main/resources/templates/squad-list.hbs
@@ -10,10 +10,8 @@
                         <div class="card-body">
                             <p class="card-title text-center"> <span>{{name}}</span></p>
                             <p class="card-text">Maximum Size: {{maxSize}}</p>
-                            <p>Cause: {{cause}}</p>
-                            <a  href="/squad/{{id}}/delete" class="btn btn-primary">Delete</a>
-                            <a href="/squad/{{id}}/update" class="btn btn-primary">Update</a>
-                            <a  href="/heroes" class="btn btn-primary">Add heroes</a>
+                            <p class="card-text">Cause: {{cause}}</p>
+                            <a  href="/squad/{{id}}" class="btn btn-primary">View Details</a>
                         </div>
                     </div>
                 </div>
